# yosys_tangnano

./: .gitignore  Makefile  README.md  blinky.v
blink/: conftest.py  pyproject.toml  up_counter.v
blink/blink/: counter.py
blink/tests/: test_blink.py
blink/tests/vcd/test_blink/: test_counter.vcd
