[tool.poetry]
name = "hello_amaranth"
version = "0.1.0"
description = ""
authors = ["suda-morris <362953310@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
amaranth = {git = "ssh://git@github.com/amaranth-lang/amaranth.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.3.0"
amaranth-yosys = "^0.10.0.dev46"
yowasp-nextpnr-gowin = "^0.1.post57.dev253"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
